--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,3 +27,17 @@
 <script src="script.js"></script> <!-- Подключаем JavaScript файл -->
 </body>
 </html>
+
+<!-- Форма входа -->
+<form id="loginForm">
+  <input type="text" id="username" placeholder="Имя пользователя" required>
+  <input type="password" id="password" placeholder="Пароль" required>
+  <button type="submit">Войти</button>
+</form>
+
+<!-- Форма регистрации -->
+<form id="registerForm">
+  <input type="text" id="newUsername" placeholder="Новое имя пользователя" required>
+  <input type="password" id="newPassword" placeholder="Новый пароль" required>
+  <button type="submit">Зарегистрироваться</button>
+</form>
