--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,7 +38,18 @@
   <button type="submit">Зарегистрироваться</button>
 </form>
 
-
-<script src="script.js"></script> <!-- Подключаем JavaScript файл -->
+<!-- Форма для почты -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Email Confirmation</title>
+</head>
+<body>
+    <h1>Email Confirmation</h1>
+    <p id="message"></p>
+    <script src="script.js"></script>
 </body>
 </html>
